--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
 
     <label>년생 (4자리)</label>
     <input type="text" id="year" placeholder="예: 1994" maxlength="4"/>
+<!-- 생월 -->
+<label>월 (2자리)</label>
+<input type="text" id="month" placeholder="예: 06" maxlength="2" />
 
+<!-- 생일 -->
+<label>일 (2자리)</label>
+<input type="text" id="day" placeholder="예: 29" maxlength="2" />
     <label>양력/음력</label>
     <select id="calendar">
       <option>양력</option>
